# llvm-analysis

./: .gitignore  LICENSE  README.md  Setup.hs  configure  configure.ac  ffi-analysis.cabal  llvm-analysis.cabal  llvm.buildinfo.in
doc/: Datalog.md  LLVM-Rewriting.md
src/: Main.hs
src/Data/: LLVM.hs  TransitiveClosure.hs
src/Data/LLVM/: AssemblyParser.hs  AssemblyParser.y  Attoparsec.hs  AttributeTypes.hs  CDG.hs  CFG.hs  CallGraph.hs  Environment.hs  ICFG.hs  Lexer.x  Modify.hs  PlaceholderTypes.hs  Rewrite.hs  Testing.hs  Types.hs  Visualization.hs
src/LLVM/: Analysis.hs
src/LLVM/Analysis/: AccessPath.hs  BlockReturnValue.hs  CDG.hs  CFG.hs  CallGraph.hs  CallGraphSCCTraversal.hs  ClassHierarchy.hs  Dataflow.hs  Dominance.hs  Escape.hs  ICFG.hs  IFDS.hs  NoReturn.hs  NullPointers.hs  PointsTo.hs  ScalarEffects.hs  Types.hs  UsesOf.hs
src/c++/: marshal.cpp  marshal.h
tests/: AccessPathTests.hs  AndersenTest.hs  BlockReturnTests.hs  CallGraphTest.hs  ClassHierarchyTests.hs  DumpArguments.hs  EscapeDriver.hs  EscapeTests.hs  FindValue.hs  INullPtrs.hs  NullabilityAnalysis.hs  ParserTest.hs  PointsTo.hs  ReturnTests.hs  TestDriver.hs  TransClosTests.hs  ViewCallGraph.hs  ViewICFG.hs  calling-conventions  float-literals  linkage
tests/accesspath/: casted-struct-ptr.c  casted-struct-ptr.c.expected  fptr-array.c  fptr-array.c.expected  global-array-ptr.c  global-array-ptr.c.expected  global-array.c  global-array.c.expected  int-ptr.c  int-ptr.c.expected  simple-struct-field.c  simple-struct-field.c.expected  struct-field-through-pointer.c  struct-field-through-pointer.c.expected
tests/block-return/: archive_header_newc.c  archive_header_newc.c.expected  archive_write_set_options.c  archive_write_set_options.c.expected  internal-loop.c  internal-loop.c.expected  return-from-loop.c  return-from-loop.c.expected  returns-with-assert.c  returns-with-assert.c.expected  single-return.c  single-return.c.expected  two-returns.c  two-returns.c.expected
tests/callgraph/order/: short-chain.c  short-chain.c.expected  simple-extern.c  small-cycle.c  small-cycle.c.expected  trivial-main.c.expected
tests/class-hierarchy/: bad-diamond.cpp  namespaces.cpp  namespaces.cpp.expected  one-level.cpp  one-level.cpp.expected  simple-multi.cpp  simple-multi.cpp.expected  two-children.cpp  two-children.cpp.expected  two-levels.cpp  two-levels.cpp.expected  virtual-diamond.cpp  virtual-diamond.cpp.expected
tests/escape/instruction-escape/: func-val-does-not-escape.c  func-val-escapes.c  self-escape.c
tests/escape/points-to/: assign-to-deref.c  assign-to-deref.c.expected  basic-globals.c  basic-globals.c.expected  basic-locals.c  basic-locals.c.expected  local-branch-postwrite.c  local-branch-postwrite.c.expected  local-pointer-with-branch-prewrite.c  local-pointer-with-branch.c  local-pointer-with-branch.c.expected  overwrite-local-pointer.c  overwrite-local-pointer.c.expected  overwrite-simple-pointer.c  overwrite-simple-pointer.c.expected  simple-bitcast.c  simple-bitcast.c.expected  simple-loop.c  simple-loop.c.expected  two-step-bitcast.c  two-step-bitcast.c.expected
tests/escape/proper-escapes/: arg-does-not-escape-through-arg.c  arg-does-not-escape-through-arg.c.expected  arg-escapes-through-arg.c  arg-escapes-through-self-field.c  arg-escapes-through-self-field.c.expected  arg-escapes-to-global.c  arg-escapes-to-global.c.expected  assign-to-field-of-returned-value.c  call-escape.c  call-escape.c.expected  escape-phi.c  escape-phi.c.expected  escape-through-call-field.c  escape-through-call-field.c.expected  fptr-escape.c  local-escape-through-arg.c  local-escape-through-arg.c.expected  local-not-arg-escape.c  non-escape-arg.c  non-escape-arg.c.expected  return-does-not-cause-escape.c  simple-local-escape.c  simple-local-escape.c.expected  struct-field.c  struct-field.c.expected  use-field-through-call.c  use-field-through-call.c.expected
tests/ifds/reach/: branching-intra.c  call-reads-global-with-default-init.c  call-reads-initialized-global.c  initialize-global-in-function.c  longer-chain.c  looping-intra.c  nullify-global-in-function.c  nullify-local-nonconst.c  nullify-local-nonconst.c.expected  nullify-local.c  one-defined-call-modifies-global.c  one-defined-call-reads-global.c  one-defined-call.c  one-extern-call.c  one-extern-call.c.expected  one-extern-void-call.c  pass-address-of-aggregate.c  pass-null-argument.c  (+30 more)
tests/noreturn/: infinite-loop.c  infinite-loop.c.expected  maybe-exit-from-loop.c  returns.c  simple-exit.c  simple-exit.c.expected  sometimes-exits.c
tests/points-to-inputs/: complex-gep-store.expected-andersen  complex-gep-store2.expected-andersen  copy-deref-double.c  copy-deref-double.expected-andersen  copy-deref-ptr.c  copy-deref-ptr.expected-andersen  copy-double-indirect-ptr.expected-andersen  copy-double-indirect-ptr2.c  copy-double-indirect-ptr2.expected-andersen  copy-pointer.c  copy-pointer.expected-andersen  copy-ptr-init.c  copy-ptr-init.expected-andersen  embedded-struct-copy-reverse.expected-andersen  embedded-struct-copy.c  extra-function.c  extra-function.expected-andersen  global-copy-ptr.c  global-copy-ptr.c.expected-andersen  indirect-array-through-arg.c  indirect-array-through-arg.c.expected-andersen  indirect-struct-copy.c  indirect-struct-copy.expected-andersen  local-chain.expected-andersen  malloced-struct.c  malloced-struct.expected-andersen  non-call.expected-andersen  out-param.c  primitive-array-store.c  real-array-store.c.expected-andersen  reverse-copy-deref-double.c  reverse-copy-deref-double.expected-andersen  reverse-return.c  reverse-return.expected-andersen  simple-fptr.c  simple-fptr.expected-andersen  simple-fptr2.c  simple-fptr2.c.expected-andersen  simple-out-param.expected-andersen  simple-phi-node.c  (+30 more)
tests/queued-points-to-inputs/: complex-gep-store.c  test-copy-struct.c
tests/virtual-dispatch/: one-class-dispatch.cpp  one-class-dispatch.cpp.expected  second-method.cpp  second-method.cpp.expected  two-class-dispatch.cpp  two-class-dispatch.cpp.expected  virtual-diamond.cpp  virtual-diamond.cpp.expected
(+144 files in other folders)
