name: llvm-analysis
version: 0.1.1
synopsis: A Haskell library for analyzing LLVM bitcode
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Development
build-type: Simple
cabal-version: >=1.10
stability: experimental
tested-with: GHC == 7.4.1
extra-source-files: README.md
description: A Haskell library for analyzing LLVM bitcode.  To convert
             bitcode to the format used by this library, see the
             llvm-data-interop package.

             This library attempts to provide some basic program analysis
             infrastructure and aims to scale to large bitcode files.

flag DebugAndersenConstraints
  description: Enable debugging output for the points-to analysis (shows constraints)
  default: False

flag DebugAndersenGraph
  description: Enable debugging output for the points-to analysis (shows the solved constraint graph in a window)
  default: False

library
  default-language: Haskell2010
  build-depends: base > 3 && < 5, array, bytestring, containers,
                 deepseq, process, filepath, directory, vector >= 0.9,
                 mtl > 2, filemanip >= 0.3.5.2, monad-par >= 0.3,
                 graphviz >= 2999.12.0.3, temporary >= 1.0, lens > 1,
                 hashable >= 1.1.2.0, unordered-containers,
                 failure >= 0.2, hashtables,
                 lens > 1, ifscs, GenericPretty > 1,
                 llvm-base-types, hbgl, boomerang,
                 hoopl >= 3.9.0.0,
                 -- Testing
                 HUnit, test-framework, test-framework-hunit,
                 -- Dealing with C++ names
                 itanium-abi, uniplate == 1.*
  hs-source-dirs: src
  exposed-modules: LLVM.Analysis,
                   LLVM.Analysis.AccessPath,
                   -- LLVM.Analysis.BlockReturnValue,
--                   LLVM.Analysis.CDG,
                   LLVM.Analysis.CFG,
                   LLVM.Analysis.CFG.Internal,
                   LLVM.Analysis.CallGraph,
                   LLVM.Analysis.CallGraphSCCTraversal,
                   LLVM.Analysis.ClassHierarchy,
                   LLVM.Analysis.Dataflow,
                   -- LLVM.Analysis.Dominance,
                   LLVM.Analysis.PointsTo,
                   LLVM.Analysis.PointsTo.AllocatorProfile,
                   LLVM.Analysis.PointsTo.Andersen,
                   LLVM.Analysis.PointsTo.TrivialFunction,
                   LLVM.Analysis.NoReturn,
                   LLVM.Analysis.ScalarEffects,
                   LLVM.Analysis.Util.Names,
                   LLVM.Analysis.Util.Testing

  if flag(DebugAndersenConstraints)
    cpp-options: "-DDEBUGCONSTRAINTS"
  ghc-options: -Wall -funbox-strict-fields
  ghc-prof-options: -auto-all

-- test-suite CallGraphTests
--   default-language: Haskell2010
--   type: exitcode-stdio-1.0
--   main-is: CallGraphTest.hs
--   hs-source-dirs: tests
--   build-depends: mtl > 2, base > 3 && < 5, filepath, containers, HUnit, bytestring,
--                  llvm-analysis >= 0.1.1, llvm-data-interop >= 0.1.1
--   ghc-options: -Wall

-- test-suite BlockReturnTests
--   default-language: Haskell2010
--   type: exitcode-stdio-1.0
--   main-is: BlockReturnTests.hs
--   hs-source-dirs: tests
--   build-depends: base == 4.*, containers, HUnit, filepath,
--                  llvm-analysis >= 0.1.1, llvm-data-interop >= 0.1.1
--   ghc-options: -Wall

test-suite ReturnTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends: base == 4.*, containers, filepath, mtl, HUnit,
                 llvm-data-interop >= 0.1.1, llvm-analysis >= 0.1.1
  ghc-options: -Wall -rtsopts
  main-is: ReturnTests.hs
  hs-source-dirs: tests

-- test-suite AccessPathTests
--   default-language: Haskell2010
--   type: exitcode-stdio-1.0
--   build-depends: base == 4.*, containers, filepath, HUnit,
--                  llvm-data-interop >= 0.1.1, llvm-analysis >= 0.1.1
--   ghc-options: -Wall -rtsopts
--   main-is: AccessPathTests.hs
--   hs-source-dirs: tests

-- test-suite ClassHierarchyTests
--   default-language: Haskell2010
--   type: exitcode-stdio-1.0
--   build-depends: base == 4.*, containers, filepath, HUnit, uniplate,
--                   llvm-analysis >= 0.1.1, llvm-data-interop >= 0.1.1,
--                   itanium-abi
--   ghc-options: -Wall -rtsopts
--   main-is: ClassHierarchyTests.hs
--   hs-source-dirs: tests

-- test-suite AndersenTests
--   default-language: Haskell2010
--   type: exitcode-stdio-1.0
--   build-depends: base, containers, filepath, HUnit,
--                  HUnit, llvm-data-interop >= 0.1.1, llvm-analysis >= 0.1.1

--   if flag(DebugAndersenGraph)
--     build-depends: graphviz
--     cpp-options: "-DDEBUGGRAPH"
--   ghc-options: -Wall
--   main-is: AndersenTest.hs
--   hs-source-dirs: tests
